--- a/.gitignore
+++ b/.gitignore
@@ -189,6 +189,8 @@ dmypy.json
 
 Python/belt_exams/
 
+TA_quick_sort.js
+
 #ZIP FILES
 *.zip
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,python
