--- a/MERN/full_stack_mern/authors/package.json
+++ b/MERN/full_stack_mern/authors/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.6",
+    "mongoose-unique-validator": "^2.0.3",
     "react-router-dom": "^5.3.0"
   }
 }
