--- a/Java/Java_spring/Full_spring/beltExam/pom.xml
+++ b/Java/Java_spring/Full_spring/beltExam/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.timothywang.beltExam</groupId>
 	<artifactId>beltExam</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>beltExam</name>
 	<description>Java belt exam</description>
 	<properties>
